--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
       <artifactId>testng</artifactId>
       <version>7.4.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>5.2.3</version>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement>
